--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,8 @@ Prediction_ANN/Prediction_ANN/shp/gis_osm_roads_free_1.shx
 Prediction_ANN/Prediction_ANN/Basemap.lyr
 Prediction_ANN/.vs/Prediction_ANN/v15/.suo
 Prediction_ANN/.vs/Prediction_ANN/v15/.suo
+Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.cpg
+Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.dbf
+Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.prj
+Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.shp
+Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.shx
