--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.prj
 Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.shp
 Prediction_ANN/Prediction_ANN/shp/gis_osm_places_free_1.shx
 Prediction_ANN/.vs/Prediction_ANN/v15/.suo
+Prediction_ANN/.vs/Prediction_ANN/v15/.suo
